# e2e-testing-tool

./: .gitignore  README.md  e2e.yaml
demo_app/: app.py
demo_app/templates/: 404.html  base.html  cart.html  dashboard.html  index.html  item_detail.html  items.html  login.html
demo_app/tests/: test_demo_app.py
e2e_runner/: pyproject.toml
e2e_runner/e2e_runner/: cli.py  config.py  discovery.py  models.py  reporter.py  runner.py  storage.py  tui.py
e2e_runner/examples/tests/: test_example.py
